# py-req-check

./: CHANGELOG.md  README.md  pyproject.toml
src/philiprehberger_req_check/: __init__.py  __main__.py
tests/: test_req_check.py
